# arithmetica-installer

./: .gitignore  CMakeLists.txt  main.cpp  tabulate.hpp
